# Petrinex

./: .gitignore  00_setup.ipynb  01_ingest.ipynb  README.md  app.py  app_databricks.py  config.yaml  databricks.yml  pyproject.toml  requirements_databricks.txt  streamlit_app.py
fixtures/: condensate_forecast_summary.parquet  condensate_forecasted_production.parquet  conv_vol_bronze_cvx.parquet  conv_vol_silver.parquet  gas_forecast_summary.parquet  gas_forecasted_production.parquet  gas_historical_forecast_combined.parquet  ngl_aer_compliant_calculations.parquet  ngl_vol_bronze_cvx.parquet  ngl_vol_silver.parquet  ngl_with_calculations.parquet  oil_forecast_summary.parquet  oil_forecasted_production.parquet  oil_historical_forecast_combined.parquet  simple_ngl_results.parquet
resources/: petrinex.job.yml  petrinex.pipeline.yml
src/: 01_ingest.ipynb  02_process.ipynb  03_forecast.ipynb  03_validate.ipynb  04_forecast.ipynb  config.yaml  dlt_pipeline.ipynb  ingest.py  local_config.yaml
src/petrinex/: __init__.py  calcs.py  config.py  forecast.py  ingest.py  ngl_calcs.py  process.py  schemas.py  utils.py  validation.py
tests/: conftest.py  main_test.py  test_calcs.py  test_config.py  test_end_to_end_integration.py  test_forecast.py  test_ingest.py  test_integration.py  test_ngl_calcs.py  test_process.py  test_utils.py
