[project]
name = "petrinex"
version = "0.0.1"
authors = [{ name = "scott.mckean@databricks.com" }]
requires-python = ">= 3.11"
dependencies = [
    "pyspark",
    "delta-spark",
    "pandas",
]



[project.optional-dependencies]
dev = [
    "pytest",
    "databricks-dlt",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
