[project]
name = "petrinex"
version = "0.0.2"
authors = [
    { name = "Scott McKean", email = "scott.mckean@databricks.com" },
    { name = "Volo Vragov", email = "volo.vragov@databricks.com" },
]
requires-python = ">= 3.12.0"

dependencies = [
    "databricks-connect==16.3.2",
    "databricks-dlt",
    "mlflow==3.1.1",
    "pydantic==2.8.2",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
