[project]
name = "petrinex"
version = "0.0.2"
authors = [
    { name = "Scott McKean", email = "scott.mckean@databricks.com" },
    { name = "Volo Vragov", email = "volo.vragov@databricks.com" },
]
requires-python = ">= 3.12.0"

dependencies = [
    "databricks-connect==16.3.2",
    "mlflow==3.1.1",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "nbconvert>=7.16.6",
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "pytest-cov>=6.2.1",
]
streamlit = [
    "streamlit",
    "plotly"
]

[tool.pytest.ini_options]
pythonpath = [
    "src/",
]
testpaths = [
    "tests",
]
